[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-ai-doctor"
version = "1.0.0"
description = "Free AI Doctor for patients who cannot afford healthcare. Trains AI agents to conduct medical consultations."
license = { text = "Apache-2.0" }
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "httpx==0.27.2",
    "openai==1.58.1",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "openenv-core>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.27.2",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[tool.setuptools.package-data]
"*" = ["data/*.json", "openenv.yaml"]